--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,34 +7,34 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.testing.atul.counter1.MainActivity">
-
-    <TextView
-        android:layout_width="200dp"
-        android:layout_height="80dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
-        android:id="@+id/box1"
-        android:numeric="integer"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textSize="40sp" />
+    tools:context="com.testing.atul.counter1.MainActivity"
+    android:id="@+id/lay1">
 
     <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/button1"
         android:id="@+id/button"
-        android:layout_below="@+id/box1"
+        android:layout_marginTop="60dp"
         android:layout_alignStart="@+id/box1" />
+
+    <TextView
+        android:layout_width="200dp"
+        android:layout_height="80dp"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/box1"
+        android:layout_below="@+id/button"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:textSize="50sp" />
+
 
     <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/button2"
         android:id="@+id/button2"
-        android:layout_below="@+id/button"
+        android:layout_below="@+id/box1"
         android:layout_alignStart="@+id/button"
         android:layout_marginTop="5dp" />
 </RelativeLayout>
